trunk/Archive/3075548b556c4f09c3f0864ca2909fcc-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:10:5: error: template argument 1 is invalid
     return {};
     ^
main.cpp:10:14: warning: extra ‘;’ [-Wpedantic]
     return {};
              ^
main.cpp:11:1: error: expected declaration before ‘}’ token
 }
 ^
